<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/increase"
            android:onClick="increase"
            style="@style/PlusButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
        <ImageButton

            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/decrease"
            android:onClick="decrease"
            style="@style/MinusButton"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score1"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Team A"
            android:textSize="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageButton

            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/increase2"
            android:onClick="increase"

            style="@style/PlusButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
        <ImageButton
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:id="@+id/decrease2"
            android:onClick="decrease"
            style="@style/MinusButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/score2"
            android:text="0"
            style="@style/sample" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Team B"
            android:textSize="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>


</LinearLayout>
