<resources>
    <string name="app_name">Todo17</string>
    <string name="minus_desc">Open your eye</string>
    <string name="night">Night Mode</string>
    <string name="day">Day Mode</string>
</resources>